<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arithmetic Kingdom</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_register">Register to play</string>
    <string name="title_activity_store">Buy Something</string>
    <string name="register_first">To be able to play with your friends, you need to register in the
    system first. This is a one-time step, you won\'t be asked to register in this device ever again.</string>
    <string name="register_and_play">Register and play!</string>
    <string name="select_char">Select your character</string>
    <string name="select_school">Select your school</string>
    <string name="select_class">Select your class</string>
    <string name="full_name_hint">Your full name</string>
    <string name="server_error">There was an error with the server, please restart the application.</string>
    <string name="welcome_player">It\'s nice to see you again, %s!</string>
    <string name="welcome_player_error">Something weird happened and I didn\'t catch your name…</string>
    <string name="register_dialog" formatted="false">Your name is %s, you go to %s, you\'re currently on %s class and chose to be a %s, is this correct?</string>
    <string name="register_error">There was a problem with your registration, care to try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="character">This is your character</string>
    <string name="title_activity_lobby">Preparing to join</string>
    <string name="enter_code">Enter the code</string>
    <string name="join_game">Join the game!</string>
    <string name="erase_registration">Erase Registration</string>
    <string name="erase_confirmation">This will erase your character from the system, with your records, and everything. Is this OK?</string>
    <string name="customize_character">Customize my Character</string>
    <string name="lobby_instructions">Type the code that is shown in the screen to join the game with your teammates and press the button below.</string>
    <string name="preparing_clients">Preparing Clients…</string>
    <string name="checking_status">Checking device status…</string>
    <string name="saving_player">Saving the player\'s information…</string>
    <string name="checking_game">Checking for game…</string>
    <string name="joining_game">Joining the game…</string>
    <string name="leave_game">Leave game</string>
    <string name="join_error">There was an error joining the game, please check the code and try again</string>
    <string name="server_error_retrying" formatted="false">There was a problem connecting to the
        server, retrying in %d seconds…</string>
    <string name="press_twice">Press twice to exit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_address">Server Address</string>
    <string name="default_server">http://blackbirdsw.noip.me</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="answer">Answer</string>
    <string name="erase">Erase</string>
    <string name="no_answer" />
    <string name="your_answer">Your Answer</string>
    <string name="no_question">Waiting…</string>
    <string name="your_question">Your Question</string>
    <string name="game_over">Game over! results are on the screen</string>
    <string name="game_error">Unexpected error during the game</string>
    <string name="shake">One of your friends is in trouble, shake the controller to help!</string>
    <string name="warrior">Warrior</string>
	<string name="wizard">Wizard</string>
    <string name="archer">Archer</string>
    <string name="store">Store</string>
    <string name="trap">You\'re trapped, ask your friends for help!</string>
    <string name="weapons">Weapons</string>
    <string name="armors">Armors</string>
    <string name="event_description">this image symbolizes the event</string>
	<string name="classes">Change Class</string>
    <string name="ok">OK</string>
    <string name="credits" formatted="false">Credits: $%d</string>
    <string name="ask_buy" formatted="false">Do you want to purchase \"%s\" for $%d?</string>
    <string name="ask_equip" formatted="false">Do you want to equip \"%s\"?</string>
    <string name="ask_unequip" formatted="false">Do you want to unequip \"%s\"?</string>
    <string name="buy_success">Item Bought</string>
    <string name="buy_error">There was an error buying the item</string>
    <string name="equip_success">Item equipped</string>
    <string name="equip_error">There was an error equipping the item</string>
    <string name="class_changed">Class Changed</string>
    <string name="change_error">There was an error changing your class</string>
    <string name="change_type">Change class: $%d</string>
    <string name="same_class">You already have that class</string>
    <string name="item_list_error">There was an error obtaining the item list</string>
    <string name="getting_items">Obtaining item list</string>

    <string-array name="characters">
        <item>Warrior</item>
        <item>Wizard</item>
        <item>Archer</item>
    </string-array>
</resources>
