<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        tools:context="cl.blackbird.reino.fragment.RegisterFragment">

        <TextView
            android:text="@string/register_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/character_img"
            android:src="@drawable/nobody"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/character"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="10"
            android:id="@+id/full_name"
            android:layout_gravity="center_horizontal"
            android:hint="@string/full_name_hint"
            android:nextFocusForward="@+id/school_spinner"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dialog"
            android:prompt="@string/select_char"
            android:id="@+id/char_spinner" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dialog"
            android:prompt="@string/select_school"
            android:id="@+id/school_spinner"
            android:nextFocusForward="@+id/class_spinner"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dialog"
            android:prompt="@string/select_class"
            android:id="@+id/class_spinner"
            android:nextFocusForward="@+id/register_button"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_and_play"
            android:id="@+id/register_button"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
