<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cl.blackbird.reino.fragment.LobbyFragment"
    android:weightSum="1">
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/character_image"
        android:src="@drawable/nobody"
        android:contentDescription="@string/character"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lobby_instructions"/>
    <EditText
        android:layout_width="@dimen/lobby_game_field"
        android:layout_height="wrap_content"
        android:id="@+id/lobby_code"
        android:hint="@string/enter_code"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:layout_gravity="center_horizontal" />
    <Button
        android:id="@+id/join_button"
        android:layout_width="@dimen/join_game_button"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:enabled="false"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
